--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ciseditor",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "main": "dist/bundle_umd.js",
   "license": "MIT",
   "scripts": {
@@ -20,5 +20,8 @@
     "webpack": "^4.35.3",
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.7.2"
+  },
+  "dependencies": {
+    "chessmd": "^1.1.0"
   }
 }
