--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ciseditor",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "main": "dist/bundle_umd.js",
   "license": "MIT",
   "scripts": {
@@ -22,5 +22,7 @@
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.7.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "chessmd": "^1.3.0"
+  }
 }
